@startuml
package ECommerce {

class AppEcommerce {
  + {static} void main(String[] args) throws InterruptedException
}

abstract class MetodoPago {
  - String nombre
  # MetodoPago(String nombre)
  + String getNombre()
  + {abstract} boolean validarDatos(Scanner teclado) throws InterruptedException
  + boolean puedePagar(double importe)
  + {abstract} void procesarPago(double importe)
}

class Bizum {
  - {static} {readOnly} int LONGITUD_TELEFONO
  - {static} {readOnly} int PIN_MIN
  - {static} {readOnly} int PIN_MAX
  - Random random
  - String telefono
  - int pin
  + Bizum(String telefono, int pin)
  + boolean validarDatos(Scanner teclado) throws InterruptedException
  + void procesarPago(double importe)
}

class PayPal {
  - {static} {readOnly} String CORREO_FORMAT
  - String cuenta
  - double saldo
  + PayPal(double saldo, String cuenta)
  + double getSaldo()
  + boolean validarDatos(Scanner teclado) throws InterruptedException
  + boolean puedePagar(double importe)
  + void procesarPago(double importe)
}

class TarjetaCredito {
  - {static} {readOnly} int LONGITUD_TARJETA
  - {static} {readOnly} String[] TIPOS_TARJETA
  - String numeroTarjeta
  - String tipoSeleccionado
  + TarjetaCredito(String numeroTarjeta)
  + boolean validarDatos(Scanner teclado) throws InterruptedException
  + void procesarPago(double importe)
}

class Tienda {
  + {static} void iniciarPago() throws InterruptedException
  - {static} void realizarPago(MetodoPago metodoPago, double importe)
  - {static} MetodoPago crearMetodoPago(String metodoPago)
  - {static} double pedirImporte(Scanner teclado)
}

MetodoPago <|-- Bizum
MetodoPago <|-- PayPal
MetodoPago <|-- TarjetaCredito

AppEcommerce ..> Tienda : usa
Tienda ..> MetodoPago : crea/valida
}
@enduml
